--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">EXP|CON</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
         </button>
+        <a class="navbar-brand" href="#">EXP|CON</a>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
