--- a/index.html
+++ b/index.html
@@ -34,40 +34,48 @@
         </div>
       </div>
     </nav>
-    <div id="hero-captions" class="carousel slide" data-bs-ride="carousel">
+    <div id="hero" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#hero-captions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#hero-captions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#hero-captions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#hero" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#hero" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#hero" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/slide-1.png" class="d-block w-100" alt="...">
+          <img src="assets/img/slide-1@2x.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>INTERACTIVE CONCERT EXPERIENCE</h5>
-            <p>Experience your favourite artists like never before and from the comfort of your own home.</p>
-            <a class="btn btn-primary" href="#">Try it now</a>
+            <div>
+              <h5>INTERACTIVE CONCERT EXPERIENCE</h5>
+              <p>Experience your favourite artists like never before and from the comfort of your own home.</p>
+              <a href="#" class="btn btn-mix-noborder" data-text="Try it out">Try it out</a>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/slide-1.png" class="d-block w-100" alt="...">
+          <img src="assets/img/slide-2@2x.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <div>
+              <h5>INTERACTIVE CONCERT EXPERIENCE</h5>
+              <p>Experience your favourite artists like never before and from the comfort of your own home.</p>
+              <a href="#" class="btn btn-mix-noborder" data-text="Try it out">Try it out</a>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/slide-1.png" class="d-block w-100" alt="...">
+          <img src="assets/img/slide-3@2x.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <div>
+              <h5>INTERACTIVE CONCERT EXPERIENCE</h5>
+              <p>Experience your favourite artists like never before and from the comfort of your own home.</p>
+              <a href="#" class="btn btn-mix-noborder" data-text="Try it out">Try it out</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js" charset="utf-8"></script>
     <script type="text/javascript">
-      var myCarousel = document.querySelector('#hero-captions')
+      var myCarousel = document.querySelector('#hero')
       var carousel = new bootstrap.Carousel(myCarousel, {
         interval: 10000
       })
