styling sound and "click' cursor funtionality

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           </span>
         </button>
         <a class="navbar-brand" href="#">EXP|CON</a>
+        <!-- <a class="d-flex" href="#">WHAT IS IT</a> -->
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -81,9 +82,22 @@
       })
     </script>
 
-    <section id="sec1">
-      <div class="outer">
-        <div class="inner">This is Section 1</div>
+    <section id="sound">
+      <div class="circle">Click</div>
+      <div class="container">
+        <div class="row">
+          <div class="col-7">
+            <h2>SUPERIOR SOUND</h2>
+            <p>
+              Experience live versions of your favourite songs.
+            </p>
+            <a href="#" class="btn btn-primary">See Demo</a>
+          </div>
+          <div class="col-5">
+            <img src="assets/img/medium17.png" alt="">
+            <img src="assets/img/medium27.png" alt="">
+          </div>
+        </div>
       </div>
     </section>
     <section id="sec2">
