--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
         interval: 10000
       })
     </script>
-
     <section id="sound">
-      <div class="circle">Click</div>
+      <div id="click" class="circle">Click</div>
       <div class="container">
         <div class="row">
           <div class="col-7">
@@ -120,6 +119,10 @@
         <div class="inner">This is Section 5</div>
       </div>
     </section>
+    <audio id="track">
+      <source src="https://cldup.com/qR72ozoaiQ.mp3" type="audio/mpeg" />
+    </audio>
+    <script src="assets/js/sound.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
