adding fonts and minor tweaks

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>EXP|CON - FE assessment </title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
